[package]
name = "rust-advent-of-code-2021"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Hugon"]

[dependencies]

[[bin]]
name = "day1"
path = "src/day1/bin.rs"

[[bin]]
name = "day2"
path = "src/day2/bin.rs"

[[bin]]
name = "day3"
path = "src/day3/bin.rs"

[[bin]]
name = "day4"
path = "src/day4/bin.rs"
